# lib/api/temp-users.ts
@@ -1,50 +1,12 @@
 import { Request, Response } from "express";
-import { Created, Ok, UnprocessableContent, handleException } from "../web/response";
+import { Created, UnprocessableContent, handleException } from "../web/response";
 import { getEmail, getUsername, getVerificationCode } from "../validation/semantic-validation";
-import { getNonEmptyString, getObject, getString } from "../validation/type-validation";
+import { getNonEmptyString, getObject } from "../validation/type-validation";
 import { generateVerificationCode } from "../random";
-import { createTempUser, deleteTempUser, findTempUser, isTempUserEmailInUse, isTempUserUsernameInUse } from "../database/temp-user";
+import { createTempUser, deleteTempUser, findTempUser } from "../database/temp-user";
 import { sendEmail } from "../email";
 import { settings } from "../settings";
-import { createUserFromTempUser, isUserEmailInUse, isUserUsernameInUse } from "../database/user";
-
-export async function getRegisterUsernameFeedback(req: Request, res: Response): Promise<void> {
-    try {
-        let feedback: string;
-        try {
-            const username = getUsername(req.query.username);
-            const inUse = (await isTempUserUsernameInUse(username)) || (await isUserUsernameInUse(username));
-            feedback = inUse ? 'Username already taken!' : 'Valid Username';
-        } catch(e: any) {
-            const username = getString(req.query.username);
-            if(username.length < 3)
-                feedback = 'Username too short!';
-            else if(username.length > 32)
-                feedback = 'Username too long!';
-            else
-                feedback = 'Username contains forbidden Character!';
-        }
-        new Ok({feedback: feedback}).send(res);
-    } catch(e: any) {
-        handleException(e, res);
-    }
-}
-
-export async function getRegisterEmailFeedback(req: Request, res: Response): Promise<void> {
-    try {
-        let feedback: string;
-        try {
-            const email = getEmail(req.query.email);
-            const inUse = (await isTempUserEmailInUse(email)) || (await isUserEmailInUse(email));
-            feedback = inUse ? 'Email already used' : 'Valid Email';
-        } catch(e: any) {
-            feedback = 'Invalid Email!';
-        }
-        new Ok({feedback: feedback}).send(res);
-    } catch(e: any) {
-        handleException(e, res);
-    }
-}
+import { createUserFromTempUser } from "../database/user";
 
 export async function postTempUser(req: Request, res: Response): Promise<void> {
     try {
@@ -64,22 +26,6 @@ export async function postTempUser(req: Request, res: Response): Promise<void> {
                 '/confirm">this Link</a> and enter Username and Verification Code.'
         });
         new Created({username: tempUser.username}).send(res);
-    } catch(e: any) {
-        handleException(e, res);
-    }
-}
-
-export async function getConfirmUsernameFeedback(req: Request, res: Response): Promise<void> {
-    try {
-        let feedback: string;
-        try {
-            const username = getUsername(req.query.username);
-            const inUse = await isTempUserUsernameInUse(username);
-            feedback = inUse ? 'Valid Username' : 'No unconfirmed Users found with specified Username!';
-        } catch(e: any) {
-            feedback = 'Invalid Username!';
-        }
-        new Ok({feedback: feedback}).send(res);
     } catch(e: any) {
         handleException(e, res);
     }
